support http idempotency
